--- a/service/pom.xml
+++ b/service/pom.xml
@@ -22,11 +22,19 @@
             <artifactId>service_base</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>common_utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
         </dependency>
+
+
         <!--hystrix依赖，主要是用 @HystrixCommand -->
         <!--        <dependency>-->
         <!--            <groupId>org.springframework.cloud</groupId>-->
